--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,8 +11,7 @@ import Layout from '../layouts/Layout.astro';
 					Hello, I'm <span class="text-transparent bg-clip-text bg-gradient-to-r from-indigo-600 to-violet-600 dark:from-indigo-400 dark:to-violet-400">Richard.</span>
 				</h1>
 				<p class="text-xl sm:text-2xl text-gray-600 dark:text-gray-300 font-light leading-relaxed max-w-3xl mx-auto">
-					Seasoned Technology Leader adept at steering complex SaaS projects and cultivating high-performing, engaged teams. <br class="hidden sm:block"/>
-                    I bridge technical complexities with strategic objectives, empowering engineers and ensuring the stability of critical cloud solutions.
+					Seasoned Technology Leader adept at steering complex SaaS projects and cultivating high-performing, engaged teams.
 				</p>
 			</div>
 
